src/test/ui/type/type-params-in-different-spaces-3.stderr
error[E0308]: mismatched types
  --> $DIR/type-params-in-different-spaces-3.rs:3:9
   |
LL |     fn test<X>(u: X) -> Self {
   |                         ---- expected `Self` because of return type
LL |         u
   |         ^ expected Self, found type parameter
   |
   = note: expected type `Self`
              found type `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
