src/test/ui/type/type-params-in-different-spaces-3.rs
trait Tr : Sized {
    fn test<X>(u: X) -> Self {
        u   //~ ERROR mismatched types
    }
}

fn main() {}
